<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".stack.fragments.ReviewFragment">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_rev_leave_submitted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_rev_leave_submitted"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/tv_rev_leave_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_rev_leave_information"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="@color/subtitle_gray"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"/>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_suitcase"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_suitcase"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/linearlayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp">

    </com.google.android.material.imageview.ShapeableImageView>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/image_suitcase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_no_leave_submitted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/tv_rev_no_leave_submitted"
            android:gravity="center"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/tv_rev_leave_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="normal"
            android:text="@string/tv_rev_leave_description"
            android:gravity="center"
            android:layout_gravity="center"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>