<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    >

    <View
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/topround_rectangle"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/button_gradient_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/mainIcon"
        >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_stack"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/submitLeave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stack_submit_leave"
        app:layout_constraintTop_toBottomOf="@id/mainIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        android:textColor="#101828"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/et_reason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter reason for leave"
        app:layout_constraintTop_toBottomOf="@id/submitLeave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"/>

    <TextView
        android:id="@+id/tv_double_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tv_double_check"
        app:layout_constraintTop_toBottomOf="@id/et_reason"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="50dp"
        android:gravity="center"
        />

    <android.widget.Button
        android:id="@+id/confirm_button"
        android:layout_width="328dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_double_check"
        android:background="@drawable/button_gradient_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tv_yes_submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        />

    <android.widget.Button
        android:id="@+id/cancel_leave"
        android:layout_width="328dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_button"
        android:background="@drawable/cancelbutton_gradient_outline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tv_no_check"
        android:textAllCaps="false"
        android:textColor="#6938EF"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>