<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stack.StackFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:clipToPadding="false"
        android:paddingBottom="75dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/shapePurpleRect"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:background="@drawable/rounded_bottom_purple"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/img_gay_suitcase"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/gay_suitcase"
                app:layout_constraintTop_toTopOf="@id/shapePurpleRect"
                app:layout_constraintEnd_toEndOf="@id/shapePurpleRect"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/stack_leave_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:text="@string/stack_leave_summary"
                app:layout_constraintStart_toStartOf="@id/shapePurpleRect"
                app:layout_constraintEnd_toEndOf="@id/shapePurpleRect"
                app:layout_constraintTop_toTopOf="@id/shapePurpleRect"
                app:layout_constraintBottom_toBottomOf="@id/shapePurpleRect"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="80dp"/>

            <TextView
                android:id="@+id/stack_submit_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="#D7D4FC"
                android:text="@string/stack_submit_leave"
                app:layout_constraintStart_toStartOf="@id/stack_leave_summary"
                app:layout_constraintTop_toBottomOf="@id/stack_leave_summary"
                android:layout_marginTop="5dp"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_stack_floating_panel"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/rounded_rectangle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="160dp">


                <LinearLayout
                    android:id="@+id/stack_linearLayout1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/cl_stack_floating_panel"
                    app:layout_constraintEnd_toEndOf="@id/cl_stack_floating_panel"
                    app:layout_constraintTop_toTopOf="@id/cl_stack_floating_panel">

                    <TextView
                        android:id="@+id/stack_total_leave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="@string/stack_total_leave"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"/>

                    <TextView
                        android:id="@+id/stack_leave_period"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="normal"
                        android:textSize="12sp"
                        android:textColor="@color/subtitle_gray"
                        android:text="@string/stack_leave_period"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="3dp"/>

                </LinearLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/stack_mini_floating_panel_1"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:background="@drawable/rounded_rectangle_border"
                    android:backgroundTint="#F7F7F7"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintTop_toBottomOf="@id/stack_linearLayout1"
                    app:layout_constraintStart_toStartOf="@id/cl_stack_floating_panel"
                    app:layout_constraintEnd_toStartOf="@id/stack_mini_floating_panel_2">

                    <View
                        android:id="@+id/v_stack_available_circle"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@drawable/circle"
                        android:backgroundTint="@color/kinda_green"
                        app:layout_constraintTop_toTopOf="@id/stack_mini_floating_panel_1"
                        app:layout_constraintStart_toStartOf="@id/stack_mini_floating_panel_1"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"/>

                    <TextView
                        android:id="@+id/stack_leave_available"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/subtitle_gray"
                        android:textStyle="bold"
                        android:text="@string/stack_leave_available"
                        app:layout_constraintTop_toTopOf="@id/v_stack_available_circle"
                        app:layout_constraintBottom_toBottomOf="@id/v_stack_available_circle"
                        app:layout_constraintStart_toEndOf="@id/v_stack_available_circle"
                        android:gravity="center_vertical"
                        android:layout_marginStart="5dp"/>

                    <TextView
                        android:id="@+id/stack_leave_available_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/stack_leave_available_amount"
                        app:layout_constraintStart_toStartOf="@id/v_stack_available_circle"
                        app:layout_constraintTop_toBottomOf="@id/v_stack_available_circle"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="2dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/stack_mini_floating_panel_2"
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:background="@drawable/rounded_rectangle_border"
                    android:backgroundTint="#F7F7F7"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintTop_toTopOf="@id/stack_mini_floating_panel_1"
                    app:layout_constraintStart_toEndOf="@id/stack_mini_floating_panel_1"
                    app:layout_constraintEnd_toEndOf="@id/cl_stack_floating_panel" >

                    <View
                        android:id="@+id/stack_used_circle"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@drawable/circle"
                        android:backgroundTint="@color/eh_purple"
                        app:layout_constraintTop_toTopOf="@id/stack_mini_floating_panel_2"
                        app:layout_constraintStart_toStartOf="@id/stack_mini_floating_panel_2"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"/>

                    <TextView
                        android:id="@+id/stack_leave_used"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/subtitle_gray"
                        android:textStyle="bold"
                        android:text="@string/stack_leave_used"
                        app:layout_constraintTop_toTopOf="@id/stack_used_circle"
                        app:layout_constraintBottom_toBottomOf="@id/stack_used_circle"
                        app:layout_constraintStart_toEndOf="@id/stack_used_circle"
                        android:gravity="center_vertical"
                        android:layout_marginStart="5dp"/>

                    <TextView
                        android:id="@+id/stack_leave_used_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/stack_leave_used_amount"
                        app:layout_constraintStart_toStartOf="@id/stack_used_circle"
                        app:layout_constraintTop_toBottomOf="@id/stack_used_circle"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="2dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_stack_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cl_stack_floating_panel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_stack_tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/rounded_very_round_rect"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:tabIndicator="@drawable/tab_indicator"
                    app:tabIndicatorGravity="stretch"
                    app:tabIndicatorHeight="0dp"
                    app:tabIndicatorFullWidth="true"

                    app:tabMode="fixed"
                    app:tabRippleColor="@android:color/transparent"
                    app:tabTextColor="@color/subtitle_gray"
                    app:tabSelectedTextColor="@color/white">


                </com.google.android.material.tabs.TabLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintTop_toBottomOf="@id/tl_stack_tab_layout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="15dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.core.widget.NestedScrollView>

    


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_stack_bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/white"
        android:layout_gravity="bottom">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_stack_submit_leave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/stack_submit_leave"
            android:textAllCaps="false"
            android:background="@drawable/button_gradient_outline"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>

